# touchless-daemon

./: .gitignore  CMakeLists.txt  data_history.cpp  gesture_parser.cpp  gesture_parser.h  gesture_visualizer.cpp  gesture_visualizer.h  gestures.cpp  gestures.h  main.cpp  readme.md
include/: DaemonGestureParserListener.hpp  GestureVisualizer.h  TouchlessDaemonListener.hpp  custom_listener.h  data_history.h  g_bus_helper.h  gesture_parser.h  gesture_visualizer.h  gestures.h
src/: DaemonGestureParserListener.cpp  GestureVisualizer.cpp  TouchlessDaemonListener.cpp  custom_listener.cpp  daemon.cpp  data_history.cpp  g_bus_helper.cpp  gesture_parser.cpp  gestures.cpp  main.cpp  parser_main.cpp  viewer_main.cpp
xml/: gesture.xml
